--- a/app/src/main/res/layout/job_detail_layout.xml
+++ b/app/src/main/res/layout/job_detail_layout.xml
@@ -6,8 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:background="@color/colorAccent"
->
+        android:background="@color/colorAccent">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
@@ -37,7 +36,6 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
 
     </android.support.design.widget.AppBarLayout>
 
@@ -146,21 +144,10 @@
                 android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tvJobInfoLocation"
                 app:layout_constraintHorizontal_bias="0.505"/>
 
-
-
-
-
-        <!--<com.google.android.gms.maps.MapView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/mapView" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"-->
-        <!--android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"-->
-        <!--android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/textView5"/>-->
-
         <ImageView
                 android:id="@+id/ivJobDetails"
                 android:contentDescription="@string/image"
+                android:visibility="invisible"
                 android:layout_width="170dp"
                 android:scaleType="fitStart"
                 android:layout_height="282dp"
@@ -173,7 +160,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
