--- a/app/src/main/res/layout/create_posting_fragment.xml
+++ b/app/src/main/res/layout/create_posting_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
+            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
 
@@ -12,10 +12,10 @@
                                                  android:layout_height="match_parent"
                                                  android:background="@color/colorSpearmint">
         <ImageView
-                android:layout_width="174dp"
-                android:layout_height="157dp"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
                 android:src="@drawable/peter_and_friends_logo"
-                android:id="@+id/imageView"
+                android:id="@+id/p_and_f_logo"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -28,16 +28,15 @@
         <ImageView
                 android:contentDescription=""
                 android:id="@+id/btn_capture_photo"
-                android:layout_width="347dp"
-                android:layout_height="464dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:src="@drawable/white_rectangle"
-
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/signUpDesc" android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintTop_toBottomOf="@+id/signUpDesc"
+                android:layout_marginBottom="70dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 
         <TextView
@@ -45,8 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/signUpDesc"
-                android:textSize="20sp"
-
+                android:textSize="25sp"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
@@ -55,10 +53,9 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintHorizontal_bias="0.494"
-                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+                app:layout_constraintTop_toBottomOf="@+id/p_and_f_logo"/>
         <EditText
                 android:id="@+id/etJobTitle"
-
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -67,8 +64,11 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="@id/btn_capture_photo"
                 app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
-                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+                android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp"/>
+
         <EditText
                 android:id="@+id/etJobDescription"
                 android:layout_width="0dp"
@@ -81,29 +81,32 @@
                 app:layout_constraintTop_toBottomOf="@+id/etJobTitle"
                 app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
                 app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-                android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
+                android:layout_marginEnd="48dp"
                 android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.4"/>
+
         <EditText
                 android:id="@+id/etJobPayment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:inputType="number|numberDecimal"
                 android:ems="10"
                 android:hint="@string/payment_hint"
-                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
-                app:layout_constraintTop_toBottomOf="@+id/etJobDescription"/>
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp"
+                app:layout_constraintTop_toBottomOf="@+id/etJobDescription"
+                app:layout_constraintStart_toStartOf="@+id/etJobDescription"/>
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Attach image"
+                android:text="@string/attach_image"
                 android:textSize="16sp"
                 android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/etJobPayment"
-                app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp" android:id="@+id/textView2"/>
+                app:layout_constraintStart_toStartOf="@+id/etJobPayment"
+                android:id="@+id/tvAttachImage"/>
 
         <ImageButton
                 android:id="@+id/btnCaptureJobPhoto"
@@ -113,16 +116,15 @@
                 app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:background="@color/colorPrimaryDark"
-
                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-                app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvAttachImage"/>
+
         <ImageView
                 android:id="@+id/ivJobImg"
                 android:layout_width="134dp"
                 android:layout_height="130dp"
                 android:scaleType="fitXY"
-
                 android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/etJobPayment"
                 app:layout_constraintStart_toEndOf="@+id/btnCaptureJobPhoto" android:layout_marginLeft="36dp"
@@ -144,7 +146,6 @@
                 android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:textColor="@android:color/white"
-
                 android:layout_marginTop="84dp" app:layout_constraintTop_toBottomOf="@+id/btnCaptureJobPhoto"/>
     </android.support.constraint.ConstraintLayout>
 
