--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginRight="8dp"
@@ -11,29 +11,30 @@
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="410dp"
+                                                 android:layout_width="match_parent"
                                                  android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ivJobPostRowImg"
 
+                android:id="@+id/ivJobPostRowImg"
                 android:layout_width="70dp"
-                android:layout_height="63dp"
+                android:layout_height="70dp"
                 android:src="@mipmap/ic_launcher"
                 app:srcCompat="@mipmap/ic_launcher_round"
                 android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
         <TextView
-                android:maxLength="12"
                 android:layout_margin="20dp"
                 android:id="@+id/tvJobTitle"
                 android:layout_gravity="center_vertical"
                 android:textSize="26sp"
-                android:layout_width="wrap_content"
+                android:layout_width="20mm"
                 android:layout_height="wrap_content"
-                android:text="Job Title"
+                android:text="@string/job_title"
                 android:ellipsize="end"
+                android:maxLines="1"
+
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg"
                 android:layout_marginTop="20dp"
@@ -53,7 +54,7 @@
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date"
+                android:text="May 22, 2019"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintTop_toBottomOf="@+id/tvJobTitle"
                 app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg"
@@ -63,7 +64,6 @@
                 android:id="@+id/tvDescription"
                 android:layout_width="267dp"
                 android:layout_height="51dp"
-                android:text="@string/jobdescription"
                 android:maxLines="3"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,9 +86,10 @@
                 android:layout_width="69dp" android:layout_height="178dp"
                 android:background="@drawable/btn_default"
                 android:textColor="#FFFFFF"
-                app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg" android:layout_marginStart="240dp"
-                android:layout_marginLeft="240dp" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                app:layout_constraintStart_toEndOf="@+id/tvJobTitle" android:layout_marginStart="84dp"
+                android:layout_marginLeft="84dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintTop_toTopOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
