--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -9,7 +9,7 @@
             android:layout_width="239dp"
             android:layout_height="236dp"
             android:src="@drawable/peter_and_friends_logo"
-            android:id="@+id/imageView"
+            android:id="@+id/p_and_f_logo"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,18 +21,18 @@
 
     <ImageView
             android:id="@+id/bgSquare"
-            android:layout_width="348dp"
+            android:layout_width="0dp"
             android:layout_height="264dp"
             android:src="@drawable/white_rectangle"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="24dp"
             app:layout_constraintHorizontal_bias="0.489"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/p_and_f_logo"/>
 
     <ImageView android:layout_width="30dp"
                android:layout_height="30dp"
