--- a/app/src/main/res/layout/mail_create.xml
+++ b/app/src/main/res/layout/mail_create.xml
@@ -8,7 +8,7 @@
             android:layout_width="239dp"
             android:layout_height="236dp"
             android:src="@drawable/peter_and_friends_logo"
-            android:id="@+id/imageView"
+            android:id="@+id/p_and_f_logo"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
             android:layout_marginRight="8dp"
             app:layout_constraintHorizontal_bias="0.489"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/p_and_f_logo"/>
 
     <EditText
             android:layout_width="0dp"
