--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -9,7 +9,7 @@
             android:layout_width="174dp"
             android:layout_height="157dp"
             android:src="@drawable/peter_and_friends_logo"
-            android:id="@+id/imageView"
+            android:id="@+id/p_and_f_logo"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,36 +22,43 @@
     <ImageView
             android:contentDescription=""
             android:id="@+id/btn_capture_photo"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="500dp"
             android:src="@drawable/white_rectangle"
-
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
             app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/signUpDesc"/>
 
 
-    <ImageView android:layout_width="30dp" android:layout_height="30dp"
+    <ImageView android:layout_width="30dp"
+               android:layout_height="30dp"
                android:src="@drawable/account"
                app:layout_constraintEnd_toStartOf="@+id/etFirstNameRegister"
-               app:layout_constraintTop_toTopOf="@+id/etFirstNameRegister" android:id="@+id/imageView3"
-               android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="4dp"/>
+               app:layout_constraintTop_toTopOf="@+id/etFirstNameRegister"
+               android:id="@+id/profileIcon"
+               android:layout_marginEnd="8dp"
+               android:layout_marginRight="8dp"
+               android:layout_marginTop="4dp"/>
 
-    <ImageView android:layout_width="30dp" android:layout_height="30dp"
-               android:src="@drawable/mail"
-               app:layout_constraintEnd_toStartOf="@+id/etEmailRegister"
-               android:id="@+id/imageView4"
-               android:layout_marginEnd="8dp"
-               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etEmailRegister"
-               android:layout_marginTop="8dp"/>
-    <ImageView android:layout_width="30dp" android:layout_height="30dp"
-               android:src="@drawable/key"
-               app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
-               android:layout_marginEnd="8dp"
-               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
-               android:layout_marginTop="8dp"/>
+    <ImageView
+            android:layout_width="30dp" android:layout_height="30dp"
+            android:src="@drawable/mail"
+            app:layout_constraintEnd_toStartOf="@+id/etEmailRegister"
+            android:id="@+id/emailIcon"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etEmailRegister"
+            android:layout_marginTop="8dp"/>
+    <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/key"
+            app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
+            android:layout_marginTop="8dp"/>
 
     <TextView
             android:text="@string/greeting"
@@ -68,10 +75,9 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/p_and_f_logo"/>
     <EditText
             android:id="@+id/etFirstNameRegister"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
@@ -101,12 +107,11 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:ems="10"
-            android:hint="Username"
-
+            android:hint="@string/username"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
-             app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
+            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
 
 
     <EditText
@@ -164,24 +169,19 @@
             android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etVerifyRegister"/>
 
     <TextView
-            android:text="By signing up, you agree to our \nTerms, Data Policy, and Cookies \nPolicy. Lucky for you,\nwe have none."
-            android:layout_width="wrap_content"
+            android:text="@string/legal_info"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/policyText"
             android:textSize="10sp"
             android:minLines="4"
             android:maxLines="4"
             android:gravity="center"
-
             android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
-
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
+            app:layout_constraintStart_toStartOf="@+id/registerBtn"
+            app:layout_constraintEnd_toEndOf="@+id/registerBtn"/>
 
 </android.support.constraint.ConstraintLayout>
 
