--- a/app/src/main/res/layout/user_update_info_activity.xml
+++ b/app/src/main/res/layout/user_update_info_activity.xml
@@ -9,7 +9,7 @@
             android:layout_width="174dp"
             android:layout_height="157dp"
             android:src="@drawable/peter_and_friends_logo"
-            android:id="@+id/imageView"
+            android:id="@+id/p_and_f_logo"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,16 +25,14 @@
             android:layout_width="342dp"
             android:layout_height="341dp"
             android:src="@drawable/white_rectangle"
-
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/signUpDesc"/>
 
-
     <TextView
-            android:text="Update Your Personal Information."
+            android:text="@string/update_your_personal_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signUpDesc"
@@ -48,7 +46,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/p_and_f_logo"/>
     <EditText
             android:id="@+id/etUpdateFirstName"
 
